--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
 /vendor/
 /logs/*
 !/logs/README.md
-linguist-language=PHP
+*.js linguist-language=php
+*.css linguist-language=php
+*.html linguist-language=php
